package com.directi.training.lsp.exercice_lsp;

public class Duck implements DuckInterface {
    public void quack() {
        System.out.println("Quack...");
    }

    public void swim() {
        System.out.println("Swim...");
    }
}
