package com.directi.training.lsp.exercice_lsp;

public interface DuckInterface {
    public void quack();

    public void swim();
}
